deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-istio
  labels:
    app: sandbox-istio
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: sandbox-istio
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: sandbox-istio
    spec:
      containers:
      - name: sandbox-istio
        imagePullPolicy: IfNotPresent
        image: sandbox-istio:latest
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - name: http
          containerPort: 3000
        resources:
          limits:
            cpu: 1
            memory: 256Mi
          requests:
            cpu: 1
            memory: 
        startupProbe:
          httpGet:
            path: /status
            port: 3000
            scheme: HTTP
          periodSeconds: 10
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /status
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /status
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
          successThreshold: 2
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
