deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-istio
  labels:
    app: sandbox-istio
spec:
  selector:
    app: sandbox-istio
  ports:
  - name: http
    port: 3000
    targetPort: http
