deploy/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sandbox-istio
spec:
  gateways:
  - sandbox-istio-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: "/test"
      ignoreUriCase: true
    route:
    - destination:
        host: sandbox-istio
        port:
          number: 3000
